# mltracker

./: .gitignore  CLAUDE.md  PLAN.md  PROGRAM.md  README.md  SKILL.md  gunicorn.conf.py  mltracker.py  nginx.conf  sinewave_test.py  wandb_clone.py
.claude/: settings.local.json
backend/: app.py  auth.py  config.py  db.py  limiter.py  models.py  requirements.txt  storage.py
backend/routes/: admin.py  api.py  projects.py  runs.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_projects.py  test_runs.py  test_storage.py
frontend/: app.js  index.html  login.html  pending.html  register.html  style.css
sdk/: README.md  mltracker.py  pyproject.toml
setup/: bootstrap.sh  certbot.sh  env.template  local_test.sh  mltracker.service  update.sh
test/: demo.py
