[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mltracker"
version = "0.1.0"
description = "MLTracker client SDK — log metrics and images from training scripts"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/abeobk/mltracker"

[tool.setuptools]
py-modules = ["mltracker"]
